--- a/driver/others/meson.build
+++ b/driver/others/meson.build
@@ -74,7 +74,7 @@ others_libs = []
 foreach conf : others_confs
   others_libs += [static_library(
     conf['name'],
-    [conf['src'], config_h],
+    conf['src'],
     include_directories: _inc,
     c_args: conf['c_args']
   )]
