--- a/interface/meson.build
+++ b/interface/meson.build
@@ -623,7 +623,7 @@ foreach conf : _blas_roots
     # Create the static library for each symbol
     lib = static_library(
         sym_name,
-        sources: [conf['fname'], config_h],
+        sources: conf['fname'],
         include_directories: _inc,
         c_args: compiler_args + [
           f'-DASMNAME=@asm_name_prefix@@sym_name@',
@@ -645,7 +645,7 @@ foreach conf : _blas_roots
         endif
         cblas_lib = static_library(
             cblas_sym_name,
-            sources: [conf['fname'], config_h],
+            sources: conf['fname'],
             include_directories: _inc,
             c_args: compiler_args + [
               '-DCBLAS',
