fix invocation of gemm3m tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,9 @@
 TOPDIR	= ..
 include ../Makefile.system
 ifeq ($(F_COMPILER),GFORTRAN)
+ifneq (, $(filter $(CORE),LOONGSON3R3 LOONGSON3R4))
+	override FFLAGS = $(filter_out(-O2 -O3,$(FFLAGS))) -O0
+endif
         override FFLAGS += -fno-tree-vectorize
 endif
 
@@ -186,8 +189,11 @@ endif
 endif
 
 
+ifeq ($(SUPPORT_GEMM3M),1)
+level3: $(B3) $(S3) $(D3) $(C3) $(Z3) level3_3m
+else
 level3: $(B3) $(S3) $(D3) $(C3) $(Z3)
-
+endif
 
 ifneq ($(CROSS), 1)
 	rm -f ?BLAT3.SUMM
@@ -260,7 +266,7 @@ endif
 endif
 
 
-level3_3m : zblat3_3m cblat3_3m
+level3_3m: zblat3_3m cblat3_3m
 ifneq ($(CROSS), 1)
 	rm -f ?BLAT3_3M.SUMM
 	OPENBLAS_NUM_THREADS=1 OMP_NUM_THREADS=1 ./cblat3_3m < ./cblat3_3m.dat
