--- a/.github/workflows/meson_linux_darwin.yml
+++ b/.github/workflows/meson_linux_darwin.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-13, macos-latest]
+        os: [ubuntu-22.04, macos-13, macos-14]
         build: [meson]
         fortran: [gfortran]
         openmp: [0]
