BLD: Create OpenBLAS shared object

--- a/lapack-netlib/SRC/meson.build
+++ b/lapack-netlib/SRC/meson.build
@@ -501,3 +501,11 @@ netlib_lapack = library(_netlib_lapack_name,
                version: lapack_version,
                soversion: lapack_major_version,
                install: true)
+
+pkg.generate(netlib_lapack,
+             name: 'lapack',
+             filebase: 'meson-lapack',
+             description: 'lapack via meson build',
+             version: f'@pkg_ver@_lapack',
+             install_dir: '../../pkgconfig',
+            )
