--- a/test/meson.build
+++ b/test/meson.build
@@ -26,7 +26,7 @@ foreach _test : _test_input_array
     executable(
         test_id,
         sources: f'@test_id@.f',
-        link_with: [_openblas],
+        link_with: [openblas_static],
         dependencies: [dependency('threads')],
     )
 
