--- a/.github/workflows/dynamic_arch.yml
+++ b/.github/workflows/dynamic_arch.yml
@@ -143,6 +143,7 @@ jobs:
               ;;
             "cmake")
               cd build && ctest
+              cd build && ctest --rerun-failed --output-on-failure
               ;;
             *)
               echo "::error::Configuration not supported"
@@ -213,6 +214,7 @@ jobs:
 
     env:
       CHERE_INVOKING: 1
+      OPENBLAS_VERBOSE: 2
 
     steps:
       - name: Get CPU name
